Initial port to 1.20.6
Initial port to 1.20.6. It compiles.